// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component  should not login or submit form with empty password 1`] = `
<div
  style="color: red;"
>
  Password Required
</div>
`;

exports[`Login component  should not login or submit form with empty username 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password 2`] = `
<div
  style="color: red;"
>
  Password Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password too short 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password too short 2`] = `
<div
  style="color: red;"
>
  Password must be at least 8 characters.
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without lowercase letter 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without lowercase letter 2`] = `
<div
  style="color: red;"
>
  Password must contain at least one lowercase letter.
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without number 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without number 2`] = `
<div
  style="color: red;"
>
  Password must contain at least one number.
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without special character 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without special character 2`] = `
<div
  style="color: red;"
>
  Password must contain at least one special character.
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without uppercase letter 1`] = `
<div
  style="color: red;"
>
  Username Required
</div>
`;

exports[`Login component  should not login or submit form with empty username and password without uppercase letter 2`] = `
<div
  style="color: red;"
>
  Password must contain at least one uppercase letter.
</div>
`;

exports[`Login component  should not login or submit form with password too short 1`] = `
<div
  style="color: red;"
>
  Password must be at least 8 characters.
</div>
`;

exports[`Login component  should not login or submit form with password without lowercase letter 1`] = `
<div
  style="color: red;"
>
  Password must contain at least one lowercase letter.
</div>
`;

exports[`Login component  should not login or submit form with password without number 1`] = `
<div
  style="color: red;"
>
  Password must contain at least one number.
</div>
`;

exports[`Login component  should not login or submit form with password without special character 1`] = `
<div
  style="color: red;"
>
  Password must contain at least one special character.
</div>
`;

exports[`Login component  should not login or submit form with password without uppercase letter 1`] = `
<div
  style="color: red;"
>
  Password must contain at least one uppercase letter.
</div>
`;

exports[`Login component should render correctly in snapshot comparison after setup 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-t0zib5-MuiGrid-root"
      style="margin-top: 3vh;"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        style="margin-bottom: 3vh;"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
        >
          Puppies and Kittens  Rescue and Adoption Agency!
        </h3>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        style="margin-bottom: 3vh;"
      >
        <div
          class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="username-input"
            id="username-input-label"
          >
            Username
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
              id="username-input"
              name="username"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-yjsfm1"
              >
                <span>
                  Username
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        style="margin-bottom: 5vh;"
      >
        <div
          class="MuiFormControl-root MuiTextField-root css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="password-input"
            id="password-input-label"
          >
            Password
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="HelpOutlineIcon"
              focusable="false"
              style="margin-left: 10px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
            </svg>
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
              id="password-input"
              name="password"
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-yjsfm1"
              >
                <span>
                  Password
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="HelpOutlineIcon"
                    focusable="false"
                    style="margin-left: 10px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
                    />
                  </svg>
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        style="margin-bottom: 2vh;"
      >
        <button
          aria-label="login"
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary css-jh47zj-MuiButtonBase-root-MuiButton-root"
          style="margin: 0.625rem;"
          tabindex="0"
          type="submit"
        >
          LOGIN
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container css-1lym95h-MuiGrid-root"
        style="margin: 0px auto; max-width: 80%;"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
        >
          <img
            alt="Playful Puppy's picture"
            class="responsive-image"
            data-testid="display-image"
            src="/images/dog/placeholder-puppy.webp"
            style="border-radius: 25%; width: 15rem; height: 15rem; object-fit: cover;"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-wg4xta-MuiGrid-root"
        >
          <img
            alt="Playful Kitten's picture"
            class="responsive-image"
            data-testid="display-image"
            src="/images/cat/placeholder-kitten.webp"
            style="border-radius: 25%; width: 15rem; height: 15rem; object-fit: cover;"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Login component should submit the form but not login when a general error message is displayed 1`] = `
<div
  style="color: red;"
>
  Error logging into app: Failed to fetch
</div>
`;

exports[`Login component should submit the form but not login with invalid credential 1`] = `
<div
  style="color: red;"
>
  Username or password is incorrect.
</div>
`;
